	- Reduce animation delay to 1 sec.
	- Bugfix with newline symbol '\n'
	- Bugfix with wrong restore previous InPlot() after text with style 'a'.
	- Bugfix for label position for log-scale axis.
	- Bugfix for mglData::Insert().
	- Bugfix for text and marks drawing in OpenGL mode.
	- Bugfix for T-ticks orientation in Ternary plot.
	- Add TeX symbol sample in documentation.
	- Now curves always start dashing from zero position.
	- Add mini-dash for '=' line style symbol.
	- Now MathGL use standard random numbers generator: GSL one or simple rand() if NO_GSL is defined.
	- Now parameter 'cnt' of Flow() is always defined by value of 'num' -- cnt = (num>0)!


1.10.2.1 Released 28 March 2010
	- Add multi-line (i.e. separated by \n) text printing.
	- Ticks adjusting now correctly work with log-scaled axis.
	- Bug with MGL options including bug with 'legend' option for automatic colors.
	- Bug with 'A' option of text style.

1.10.2 Released 22 March 2010
	- Add MGL command 'loadfont' for in-script font changing.
	- Add labelw_ext() and rename Label() to Labelw() for wchar_t argument.
	- Python interface now can use 3D NumPy arrays as initialization of mglData() constructor.
	- Add C/Fortran/SWIG interface for a number of mglData functions: Find(), Last(), FindAny(), Maximal(), Minimal(), Momentum().
	- Add extra argument for Face() which define variable color for the face (C++ only).
	- Bug with font path reconstraction in win32.
	- Bug with options parsing for MGL command.
	- Bug in mglData::Sum(), Max(), Min() for operation along several direction.

1.10.1 Released 5 March 2010
	- Add "in-place" commands for arguments in a MGL script (like, "plot {sum dat 'x'}").
	- Add StickPlot() for putting plot in to a cell of sticks
	- Add parsing of MGL option arguments.
	- Allow marks drawing in Tens() plot.
	- If text style contain 'a'/'A' then text in absolute subplot/picture coordinates is drawn.
	- Add functions mglGraph::Hist() for converting value from points to grids.