@@ -18,6 +18,9 @@
  *   59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.             *
  ***************************************************************************/
 //---------------------------------------------------------------------------
+#ifdef _MGL_W_H_
+#warning "MathGL wrapper was enabled. So disable original MathGL classes"
+#else
 #ifndef _MGL_EVAL_H_
 #define _MGL_EVAL_H_
 //---------------------------------------------------------------------------
@@ -59,4 +62,5 @@ protected:
 //---------------------------------------------------------------------------
 char *mgl_strdup(const char *s);
 //-----------------------------------------------------------------------------
+#endif
 #endif
